# mapinator

./: Cargo.toml  README.md  flake.nix  map.html  render.html
src/: main.rs  template.html
test-entries/: invalid-lat.md  missing-lat.md  missing-lng.md  missing-title.md  no-frontmatter.md  only-frontmatter.md  test.md  test2.md
