[package]
name = "mapinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gray_matter = "0.2.6"
markdown = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.19.1"
walkdir = "2.4.0"
